cmake_minimum_required(VERSION 3.24)
project(c_mooc_learning_from_wengkai C)

set(CMAKE_C_STANDARD 11)

add_executable(c_mooc_learning_from_wengkai main.c a3/code2.c ../../../../code7.c ../../../../code7.c a2/code2.c a5/code2.c a5/code3.c a6/code1.c a7/code1.c a7/code2.c a8/code1.c a8/code1.c a8/code2.c a8/code3.c a8/code3.c a8/code4.c)
