cmake_minimum_required(VERSION 3.24)
project(c_mooc_learning_from_wengkai C)

set(CMAKE_C_STANDARD 11)

add_executable(c_mooc_learning_from_wengkai main.c a3/code2.c ../../../../code7.c ../../../../code7.c a2/code2.c a5/code2.c a5/code3.c a6/code1.c a7/code1.c a7/code2.c a8/code1.c a8/code1.c a8/code2.c a8/code3.c a8/code3.c a8/code4.c a8/code5.c a9/code1.c a9/code2.c a9/code2.c a9/code3.c a9/code4.c a9/code5.c a9/code6.c a9/code7.c a9/code8.c a9/code9.c a9/code10.c a9/code11.c a9/code12.c a9/code13.c a10/code1.c a10/code2.c a10/code2.c a10/code3.c)
